* 2014-03-28 - martin.schneider@open-xchange.com

 - Fix for bug 31795: Do not check capability if session is anonymous

* 2014-03-28 - jan.bauerdick@open-xchange.com

 - Fix for bug 30835: Replaced unordered json object by an ordered json array

* 2014-03-27 - marc.arens@open-xchange.com

 - Fix for bug 26436: Document workaround for Apache < 2.4 and set up combined balancing proxy for usm and eas
 - Fix for bug 29128: Move default config to ProxyPass syntax suitable for apache 2.2 and 2.4
 - Fix for bug 31700: Increase sync timeout to 1900 to respect com.openexchange.usm.eas.ping.max_heartbeat
 - Fix for bug 31701: Document workaround for Apache < 2.4 and set up combined balancing proxy for usm and eas
 - Fix for bug 31702: Document workaround for Apache < 2.4 and set up combined balancing proxy for usm and eas

 
* 2014-03-27 - martin.herfurth@open-xchange.com

 - Fix for bug 31525: Removed shown_as field (ical: transparency) from emmitted ical to suppress unnecessary changes.

* 2014-03-27 - thorben.betten@open-xchange.com

 - Fix for bug 31783: Avoid time zones for administrative zones
 - Fix for bug 31750: Fixed download for plain-text files

* 2014-03-26 - thorben.betten@open-xchange.com

 - Fix for bug 31770: Retrieve deferrer URL from config-cascade look-up

* 2014-03-25 - thorben.betten@open-xchange.com

 - Fix for bug 31747: Added property to adjust JVM XML entityExpansionLimit o certain needs
 - Fix for bug 31745: Mention the unit for property "com.openexchange.sessiond.sessionDefaultLifeTime"
 - Fix for bug 31189: Added appropriate display message for error code "MSG-0014"

* 2014-03-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 31716: Don't rely on cookies being accepted by WebDAV clients  

* 2014-03-24 - thorben.betten@open-xchange.com

 - Fix for bug 31727: Improved descriptions for database-based and script-based password-change bundles
 - Fix for bug 31717: Improved description of "com.openexchange.servlet.maxInactiveInterval" property
